# Thesis_code

./: .gitignore  AGENT.md  README.md  pyproject.toml
configs/: hazards.yaml  prompts.yaml
data/: cyclone_grid.json  wildfire_grid.json
data/ground_truth/: apple.json  nike.json  toyota.json
scripts/: download_data.py  preprocess_cyclone.py  preprocess_wildfire.py
src/bor_risk/: __init__.py  __main__.py  agent.py  agent_tools.py  budget.py  cli.py  evaluate.py  graph.py  models.py  report.py  search.py  sensitivity.py  tools.py  utils.py
tests/: conftest.py  test_agent_tools.py  test_budget.py  test_enhanced_report.py  test_evaluation.py  test_hazard_scoring.py  test_langgraph_features.py  test_llm_discovery.py  test_mitigation_generation.py  test_search.py  test_sensitivity.py  test_suggest_alternatives.py  test_tier_expansion.py  test_verification.py  test_workflow_decision.py
tests/fixtures/: flood_response.json  heat_response.json  mock_suppliers.json  precip_response.json
tests/fixtures/llm_responses/: acme_alternatives.json  acme_mitigations.json  acme_profile.json  acme_tier1.json  acme_tier2_chipworks.json  acme_tier2_steelcorp.json
